fix: remove overflow

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,6 +8,7 @@
   // position: relative;
   font-family: 'Source Serif Pro';
   position: relative;
+  overflow: hidden;
 }
 
 .bannerHome {
@@ -60,26 +61,25 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+
     justify-content: center;
     align-items: center;
-    height: 70%;
+    height: 100%;
     gap: 2.5rem;
     // background-color: rgb(132, 92, 92);
   
     & > p {
       font-size: 4rem;
-     
+      font-family: "Source Serif Pro Italic";
+    }
+
+    & > span {
+      font-family: "Source Serif Pro";
+      font-weight: 100;
+
     }
 
     & > button {
-      // padding: 1rem 1.6rem;
-      // text-transform: uppercase;
-      // background-color: $golden;
-      // font-weight: 500;
-      // letter-spacing: 0.2rem;
-      // color: $white0;
-      // cursor: pointer;
-      // transition: .2s all;
       background-color: transparent;
       font-size: 1.2rem;
       border: 1px solid $golden;
